POWR-350 Update all the defualt and search result display modes

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
+    - field.field.node.information.field_summary
     - node.type.information
   module:
     - content_moderation
@@ -37,6 +38,14 @@ content:
         collapse_edit_all: collapse_edit_all
         add_above: add_above
     third_party_settings: {  }
+    region: content
+  field_summary:
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   moderation_state:
     type: moderation_state_default
