--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.search_result.yml
@@ -1,8 +1,9 @@
-uuid: e2778318-415d-463a-bbd0-0fc09a301421
+uuid: 1ab98470-2a12-4339-8267-c808d35134ca
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.search_result
     - field.field.group.bureau_office.field_address
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
@@ -26,16 +27,50 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - 'bundle_field:group'
         - label
         - field_summary
-id: group.bureau_office.default
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: ''
+            fi-cl: 'text-muted text-uppercase'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+id: group.bureau_office.search_result
 targetEntityType: group
 bundle: bureau_office
-mode: default
+mode: search_result
 content:
   field_summary:
     type: string
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings:
@@ -72,11 +107,39 @@ content:
   label:
     label: hidden
     type: string
-    weight: 0
+    weight: 1
     region: content
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
+      link_to_entity: true
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: h3
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   changed: true
   created: true
