--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -1,15 +1,22 @@
-uuid: 4c339d89-ff9c-4fac-9a6c-263331300c80
+uuid: 973064c8-c407-43cb-a949-1b1909f59a97
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.search_result
-    - field.field.taxonomy_term.community_actions.field_fontawesome_icon
-    - taxonomy.vocabulary.community_actions
+    - core.entity_view_mode.node.search_result
+    - field.field.node.event.field_all_day
+    - field.field.node.event.field_body
+    - field.field.node.event.field_end_date
+    - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_location
+    - field.field.node.event.field_start_date
+    - field.field.node.event.field_start_time
+    - field.field.node.event.field_summary
+    - node.type.event
   module:
     - ds
     - panelizer
-    - text
+    - user
 third_party_settings:
   panelizer:
     enable: false
@@ -25,12 +32,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:taxonomy_term'
-        - taxonomy_term_title
-        - description
+        - 'bundle_field:node'
+        - node_title
+        - field_summary
     fields:
-      'bundle_field:taxonomy_term':
-        plugin_id: 'bundle_field:taxonomy_term'
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
         weight: 0
         label: hidden
         formatter: default
@@ -61,8 +68,8 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-      taxonomy_term_title:
-        plugin_id: taxonomy_term_title
+      node_title:
+        plugin_id: node_title
         weight: 1
         label: hidden
         formatter: default
@@ -76,17 +83,33 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: taxonomy_term.community_actions.search_result
-targetEntityType: taxonomy_term
-bundle: community_actions
+id: node.event.search_result
+targetEntityType: node
+bundle: event
 mode: search_result
 content:
-  description:
-    label: hidden
-    type: text_default
+  field_summary:
     weight: 2
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: string
     region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
-  field_fontawesome_icon: true
+  content_moderation_control: true
+  field_all_day: true
+  field_body: true
+  field_end_date: true
+  field_end_time: true
+  field_event_location: true
+  field_start_date: true
+  field_start_time: true
+  links: true
