--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -1,15 +1,17 @@
-uuid: 4c339d89-ff9c-4fac-9a6c-263331300c80
+uuid: 7e8b5d02-98f9-4fe8-9ca1-c54e083469f0
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.search_result
-    - field.field.taxonomy_term.community_actions.field_fontawesome_icon
-    - taxonomy.vocabulary.community_actions
+    - core.entity_view_mode.node.search_result
+    - field.field.node.news.field_body
+    - field.field.node.news.field_summary_and_lead_paragraph
+    - field.field.node.news.field_topics
+    - node.type.news
   module:
     - ds
     - panelizer
-    - text
+    - user
 third_party_settings:
   panelizer:
     enable: false
@@ -25,12 +27,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:taxonomy_term'
-        - taxonomy_term_title
-        - description
+        - 'bundle_field:node'
+        - node_title
+        - field_summary_and_lead_paragraph
     fields:
-      'bundle_field:taxonomy_term':
-        plugin_id: 'bundle_field:taxonomy_term'
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
         weight: 0
         label: hidden
         formatter: default
@@ -61,8 +63,8 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-      taxonomy_term_title:
-        plugin_id: taxonomy_term_title
+      node_title:
+        plugin_id: node_title
         weight: 1
         label: hidden
         formatter: default
@@ -76,17 +78,21 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: taxonomy_term.community_actions.search_result
-targetEntityType: taxonomy_term
-bundle: community_actions
+id: node.news.search_result
+targetEntityType: node
+bundle: news
 mode: search_result
 content:
-  description:
-    label: hidden
-    type: text_default
+  field_summary_and_lead_paragraph:
     weight: 2
-    region: content
-    settings: {  }
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
 hidden:
-  field_fontawesome_icon: true
+  content_moderation_control: true
+  field_body: true
+  field_topics: true
+  links: true
