--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.search_result.yml
@@ -42,24 +42,24 @@ third_party_settings:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
-            ow: true
             ow-el: ''
             ow-cl: 'text-muted align-right'
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
+            fi: true
             fi-el: ''
-            fi-cl: ''
+            fi-cl: 'text-muted text-uppercase'
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
+            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
-            fi: false
             fi-def-at: false
       taxonomy_term_title:
         plugin_id: taxonomy_term_title
@@ -68,7 +68,7 @@ third_party_settings:
         formatter: default
         settings:
           link: true
-          wrapper: h2
+          wrapper: h3
           class: ''
         ft:
           id: default
