--- a/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.service_location.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_get_directions
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
     - link
@@ -16,7 +17,7 @@ bundle: service_location
 mode: default
 content:
   field_building:
-    weight: 2
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -25,7 +26,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_floor:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -33,7 +34,7 @@ content:
     type: string_textfield
     region: content
   field_get_directions:
-    weight: 4
+    weight: 5
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -41,7 +42,15 @@ content:
     type: link_default
     region: content
   field_open_hours:
-    weight: 3
+    weight: 4
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_summary:
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -55,6 +64,11 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  url_redirects:
+    weight: 6
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
