--- a/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.search_result.yml
@@ -1,8 +1,9 @@
-uuid: dddc2c71-a291-4cb3-9602-fcbcf71e8c37
+uuid: c9159c0f-b1ee-4367-a9ea-bb34a1b644dd
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.group.search_result
     - field.field.group.elected_official.field_address
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
@@ -13,16 +14,74 @@ dependencies:
     - field.field.group.elected_official.field_shortname_or_acronym
     - field.field.group.elected_official.field_summary
     - group.type.elected_official
-id: group.elected_official.default
+  module:
+    - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - 'bundle_field:group'
+        - label
+        - field_summary
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: ''
+            fi-cl: 'text-muted text-uppercase'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+id: group.elected_official.search_result
 targetEntityType: group
 bundle: elected_official
-mode: default
+mode: search_result
 content:
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  label:
+    label: hidden
+    type: string
+    weight: 1
+    region: content
+    settings:
+      link_to_entity: true
     third_party_settings:
       ds:
         ft:
@@ -40,8 +99,8 @@ content:
             fis-cl: ''
             fis-at: ''
             fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: h3
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -52,16 +111,6 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-    type: string
-    region: content
-  label:
-    label: hidden
-    type: string
-    weight: 0
-    region: content
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
 hidden:
   changed: true
   created: true
