--- a/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.search_result.yml
@@ -1,15 +1,21 @@
-uuid: 4c339d89-ff9c-4fac-9a6c-263331300c80
+uuid: 00361c0d-a707-4e50-8d9f-b54dee4af9cf
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.search_result
-    - field.field.taxonomy_term.community_actions.field_fontawesome_icon
-    - taxonomy.vocabulary.community_actions
+    - core.entity_view_mode.node.search_result
+    - field.field.node.city_service.field_audience
+    - field.field.node.city_service.field_community_actions
+    - field.field.node.city_service.field_related_content
+    - field.field.node.city_service.field_service_mode
+    - field.field.node.city_service.field_summary
+    - field.field.node.city_service.field_time_to_complete
+    - field.field.node.city_service.field_topics
+    - node.type.city_service
   module:
     - ds
     - panelizer
-    - text
+    - user
 third_party_settings:
   panelizer:
     enable: false
@@ -25,12 +31,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:taxonomy_term'
-        - taxonomy_term_title
-        - description
+        - 'bundle_field:node'
+        - node_title
+        - field_summary
     fields:
-      'bundle_field:taxonomy_term':
-        plugin_id: 'bundle_field:taxonomy_term'
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
         weight: 0
         label: hidden
         formatter: default
@@ -61,8 +67,8 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-      taxonomy_term_title:
-        plugin_id: taxonomy_term_title
+      node_title:
+        plugin_id: node_title
         weight: 1
         label: hidden
         formatter: default
@@ -76,17 +82,26 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: taxonomy_term.community_actions.search_result
-targetEntityType: taxonomy_term
-bundle: community_actions
+id: node.city_service.search_result
+targetEntityType: node
+bundle: city_service
 mode: search_result
 content:
-  description:
-    label: hidden
-    type: text_default
+  field_summary:
     weight: 2
-    region: content
-    settings: {  }
+    label: hidden
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
 hidden:
-  field_fontawesome_icon: true
+  content_moderation_control: true
+  field_audience: true
+  field_community_actions: true
+  field_related_content: true
+  field_service_mode: true
+  field_time_to_complete: true
+  field_topics: true
+  links: true
+  scheduled_publication: true
