--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_get_directions
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
     - link
@@ -24,7 +25,7 @@ bundle: service_location
 mode: default
 content:
   field_building:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       view_mode: address
@@ -33,7 +34,7 @@ content:
     type: entity_reference_entity_view
     region: content
   field_floor:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -41,7 +42,7 @@ content:
     type: string
     region: content
   field_get_directions:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       trim_length: 80
@@ -53,11 +54,47 @@ content:
     type: link
     region: content
   field_open_hours:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
+  field_summary:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: string
     region: content
 hidden:
