--- a/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.search_result.yml
@@ -1,15 +1,19 @@
-uuid: 4c339d89-ff9c-4fac-9a6c-263331300c80
+uuid: cb6c9df7-4fe5-4b21-b3f0-3a3b0f6c4d8b
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.taxonomy_term.search_result
-    - field.field.taxonomy_term.community_actions.field_fontawesome_icon
-    - taxonomy.vocabulary.community_actions
+    - core.entity_view_mode.node.search_result
+    - field.field.node.service_location.field_building
+    - field.field.node.service_location.field_floor
+    - field.field.node.service_location.field_get_directions
+    - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_summary
+    - node.type.service_location
   module:
     - ds
     - panelizer
-    - text
+    - user
 third_party_settings:
   panelizer:
     enable: false
@@ -25,12 +29,12 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - 'bundle_field:taxonomy_term'
-        - taxonomy_term_title
-        - description
+        - 'bundle_field:node'
+        - node_title
+        - field_summary
     fields:
-      'bundle_field:taxonomy_term':
-        plugin_id: 'bundle_field:taxonomy_term'
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
         weight: 0
         label: hidden
         formatter: default
@@ -61,8 +65,8 @@ third_party_settings:
             fis: false
             fis-def-at: false
             fi-def-at: false
-      taxonomy_term_title:
-        plugin_id: taxonomy_term_title
+      node_title:
+        plugin_id: node_title
         weight: 1
         label: hidden
         formatter: default
@@ -76,17 +80,24 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: taxonomy_term.community_actions.search_result
-targetEntityType: taxonomy_term
-bundle: community_actions
+id: node.service_location.search_result
+targetEntityType: node
+bundle: service_location
 mode: search_result
 content:
-  description:
-    label: hidden
-    type: text_default
+  field_summary:
     weight: 2
-    region: content
-    settings: {  }
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
+    type: string
+    region: content
 hidden:
-  field_fontawesome_icon: true
+  content_moderation_control: true
+  field_building: true
+  field_floor: true
+  field_get_directions: true
+  field_open_hours: true
+  links: true
+  scheduled_publication: true
