--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.taxonomy_term.audience.field_fontawesome_icon
     - taxonomy.vocabulary.audience
   module:
+    - ds
     - panelizer
     - text
 third_party_settings:
@@ -25,6 +26,34 @@ content:
     weight: 0
     region: content
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
 hidden:
   field_fontawesome_icon: true
