POWR-387 clean up fields after correcting data in alpha

--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.city_service.field_topics
     - node.type.city_service
   module:
+    - ds
     - entity_reference_revisions
     - panelizer
     - user
@@ -21,6 +22,19 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - content_moderation_control
+        - field_summary
+        - field_time_to_complete
+        - field_service_mode
 id: node.city_service.default
 targetEntityType: node
 bundle: city_service
