--- a/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.search_result.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.node.search_result
     - field.field.node.guide.field_body
     - field.field.node.guide.field_related_content
-    - field.field.node.guide.field_summary_and_lead_paragraph
+    - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
   module:
@@ -30,7 +30,7 @@ third_party_settings:
       content:
         - 'bundle_field:node'
         - node_title
-        - field_summary_and_lead_paragraph
+        - field_summary
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -84,14 +84,14 @@ targetEntityType: node
 bundle: guide
 mode: search_result
 content:
-  field_summary_and_lead_paragraph:
+  field_summary:
+    type: string
     weight: 2
+    region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
   field_body: true
