--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.information.field_summary
     - node.type.information
   module:
+    - ds
     - entity_reference_revisions
     - panelizer
     - user
@@ -16,14 +17,38 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        classes: {  }
+        wrappers:
+          content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+    regions:
+      content:
+        - content_moderation_control
+        - field_summary
+        - field_body
 id: node.information.default
 targetEntityType: node
 bundle: information
 mode: default
 content:
+  content_moderation_control:
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_body:
     type: entity_reference_revisions_entity_view
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       view_mode: default
@@ -48,12 +73,12 @@ content:
             ow-el: ''
             ow-cl: ''
             ow-at: ''
-            fis-el: ''
-            fis-cl: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -61,12 +86,11 @@ content:
             ow: false
             ow-def-at: false
             ow-def-cl: false
-            fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: string
     region: content
 hidden:
-  content_moderation_control: true
   links: true
   scheduled_publication: true
