--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.news.field_body
-    - field.field.node.news.field_summary_and_lead_paragraph
+    - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
@@ -29,7 +29,7 @@ third_party_settings:
       content:
         - 'bundle_field:node'
         - node_title
-        - field_summary_and_lead_paragraph
+        - field_summary
     fields:
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
@@ -83,14 +83,14 @@ targetEntityType: node
 bundle: news
 mode: search_result
 content:
-  field_summary_and_lead_paragraph:
+  field_summary:
+    type: string
     weight: 2
+    region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
   field_body: true
