--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.news.field_body
-    - field.field.node.news.field_summary_and_lead_paragraph
+    - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
@@ -29,9 +29,41 @@ third_party_settings:
       content:
         - 'bundle_field:node'
         - node_title
-        - field_summary_and_lead_paragraph
+        - field_summary
         - node_changed_date
     fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 0
+        label: hidden
+        formatter: default
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow: true
+            ow-el: ''
+            ow-cl: 'text-muted align-right'
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
       node_changed_date:
         plugin_id: node_changed_date
         weight: 3
@@ -79,44 +111,12 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-      'bundle_field:node':
-        plugin_id: 'bundle_field:node'
-        weight: 0
-        label: hidden
-        formatter: default
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
-            lbw-at: ''
-            ow: true
-            ow-el: ''
-            ow-cl: 'text-muted align-right'
-            ow-at: ''
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            suffix: ''
-            lbw: false
-            lb-col: false
-            ow-def-at: false
-            ow-def-cl: false
-            fis: false
-            fis-def-at: false
-            fi: false
-            fi-def-at: false
 id: node.news.teaser
 targetEntityType: node
 bundle: news
 mode: teaser
 content:
-  field_summary_and_lead_paragraph:
+  field_summary:
     type: string
     weight: 2
     region: content
