--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
+    - ds
     - link
     - panelizer
     - user
@@ -19,6 +20,20 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_summary
+        - field_building
+        - field_floor
+        - field_open_hours
+        - field_get_directions
 id: node.service_location.default
 targetEntityType: node
 bundle: service_location
@@ -48,9 +63,16 @@ content:
       trim_length: 80
       url_only: false
       url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
+      rel: '0'
+      target: '0'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: link
     region: content
   field_open_hours:
@@ -79,12 +101,12 @@ content:
             ow-el: ''
             ow-cl: ''
             ow-at: ''
-            fis-el: ''
-            fis-cl: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -92,8 +114,8 @@ content:
             ow: false
             ow-def-at: false
             ow-def-cl: false
-            fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: string
     region: content
