--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - node.type.event
   module:
     - datetime
+    - ds
     - entity_reference_revisions
     - panelizer
     - time_field
@@ -24,28 +25,43 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        classes: {  }
+        wrappers:
+          content: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+    regions:
+      content:
+        - content_moderation_control
+        - field_summary
+        - field_start_date
+        - field_start_time
+        - field_end_date
+        - field_end_time
+        - field_event_location
+        - field_body
+        - field_all_day
 id: node.event.default
 targetEntityType: node
 bundle: event
 mode: default
 content:
   content_moderation_control:
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_all_day:
-    weight: 2
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
   field_body:
-    weight: 8
+    weight: 7
     label: hidden
     settings:
       view_mode: default
@@ -54,7 +70,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_end_date:
-    weight: 5
+    weight: 4
     label: hidden
     settings:
       timezone_override: ''
@@ -63,7 +79,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 6
+    weight: 5
     label: hidden
     settings:
       time_format: 'h:i a'
@@ -72,15 +88,23 @@ content:
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 7
+    weight: 6
     label: hidden
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   field_start_date:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       timezone_override: ''
@@ -89,7 +113,7 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       time_format: 'h:i a'
@@ -97,7 +121,7 @@ content:
     type: time_formatter
     region: content
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -114,12 +138,12 @@ content:
             ow-el: ''
             ow-cl: ''
             ow-at: ''
-            fis-el: ''
-            fis-cl: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
@@ -127,10 +151,11 @@ content:
             ow: false
             ow-def-at: false
             ow-def-cl: false
-            fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
     type: string
     region: content
 hidden:
+  field_all_day: true
   links: true
