--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -6,10 +6,10 @@ dependencies:
     - field.field.node.guide.field_body
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_summary
-    - field.field.node.guide.field_summary_and_lead_paragraph
     - field.field.node.guide.field_topics
     - node.type.guide
   module:
+    - ds
     - entity_reference_revisions
     - panelizer
     - user
@@ -19,6 +19,18 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - content_moderation_control
+        - field_summary
+        - field_body
 id: node.guide.default
 targetEntityType: node
 bundle: guide
@@ -39,19 +51,39 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_summary:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_summary_and_lead_paragraph:
     weight: 1
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
     type: string
     region: content
 hidden:
