--- a/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.teaser.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.guide.field_body
     - field.field.node.guide.field_related_content
-    - field.field.node.guide.field_summary_and_lead_paragraph
+    - field.field.node.guide.field_summary
     - field.field.node.guide.field_topics
     - node.type.guide
   module:
@@ -30,23 +30,8 @@ third_party_settings:
       content:
         - 'bundle_field:node'
         - node_title
-        - field_summary_and_lead_paragraph
+        - field_summary
     fields:
-      node_title:
-        plugin_id: node_title
-        weight: 1
-        label: hidden
-        formatter: default
-        settings:
-          link: true
-          wrapper: h2
-          class: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
       'bundle_field:node':
         plugin_id: 'bundle_field:node'
         weight: 0
@@ -79,12 +64,27 @@ third_party_settings:
             fis-def-at: false
             fi: false
             fi-def-at: false
+      node_title:
+        plugin_id: node_title
+        weight: 1
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h2
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.guide.teaser
 targetEntityType: node
 bundle: guide
 mode: teaser
 content:
-  field_summary_and_lead_paragraph:
+  field_summary:
     type: string
     weight: 2
     region: content
