POWR-387 fix the taxonomy page description to have lead class

--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.default.yml
@@ -15,6 +15,16 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - description
 id: taxonomy_term.audience.default
 targetEntityType: taxonomy_term
 bundle: audience
@@ -36,24 +46,24 @@ content:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
+            ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: lead
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
-            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
 hidden:
   field_fontawesome_icon: true
