--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.audience.full.yml
@@ -1,4 +1,4 @@
-uuid: 6f70c7c0-fc0c-45b8-9ebc-6e3b160559b8
+uuid: 3b90f128-52b8-466e-8436-0847a68dc60f
 langcode: en
 status: true
 dependencies:
@@ -7,6 +7,7 @@ dependencies:
     - field.field.taxonomy_term.audience.field_fontawesome_icon
     - taxonomy.vocabulary.audience
   module:
+    - ds
     - panelizer
     - text
 third_party_settings:
@@ -15,6 +16,16 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - description
 id: taxonomy_term.audience.full
 targetEntityType: taxonomy_term
 bundle: audience
@@ -26,6 +37,34 @@ content:
     weight: 0
     region: content
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow: true
+            ow-el: ''
+            ow-cl: lead
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
 hidden:
   field_fontawesome_icon: true
