--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.default.yml
@@ -77,24 +77,24 @@ content:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
+            ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: lead
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
-            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
 hidden:
   field_fontawesome_icon: true
