--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.topics.full.yml
@@ -1,6 +1,6 @@
 uuid: a9d6ac34-bd09-4e81-8dac-3bd3209b1bb2
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.full
@@ -25,24 +25,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - taxonomy_term_title
         - description
-    fields:
-      taxonomy_term_title:
-        plugin_id: taxonomy_term_title
-        weight: 0
-        label: hidden
-        formatter: default
-        settings:
-          wrapper: h1
-          class: 'fa fas-[term:original:field_fontawesome_icon]'
-          link: false
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
 id: taxonomy_term.topics.full
 targetEntityType: taxonomy_term
 bundle: topics
@@ -51,9 +34,37 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis: true
+            fis-el: p
+            fis-cl: lead
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
 hidden:
   field_fontawesome_icon: true
