--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
@@ -9,7 +9,6 @@ dependencies:
     - views.view.services_by_topic_without_action
   module:
     - ctools
-    - ctools_block
     - panels
     - views
 id: taxonomy_term_page-panels_variant-0
@@ -28,31 +27,6 @@ variant_settings:
       weight: 2
       uuid: 79c44e9c-966f-4ff4-8843-5dd407698ee0
       context_mapping: {  }
-    7b8b40bb-1115-4ac2-858d-e23f95deb52e:
-      id: page_title_block
-      label: 'Page title'
-      provider: core
-      label_display: '0'
-      region: content
-      weight: -2
-      uuid: 7b8b40bb-1115-4ac2-858d-e23f95deb52e
-      context_mapping: {  }
-    8b91f3d8-0579-43ae-9080-4ae482ef38d0:
-      id: 'entity_field:taxonomy_term:description'
-      label: Description
-      provider: ctools_block
-      label_display: '0'
-      formatter:
-        label: hidden
-        type: text_default
-        settings: {  }
-        third_party_settings: {  }
-        weight: 0
-      region: content
-      weight: -1
-      uuid: 8b91f3d8-0579-43ae-9080-4ae482ef38d0
-      context_mapping:
-        entity: taxonomy_term
     f6176976-2383-47bd-8a19-da35dc1d613e:
       id: 'views_block:services_by_topic-block_1'
       label: ''
@@ -75,6 +49,17 @@ variant_settings:
       weight: 1
       uuid: 2fff8504-5649-4b36-9bda-2f3d730be700
       context_mapping: {  }
+    06bc7bad-b281-404d-b7b1-a682216fb40b:
+      id: 'entity_view:taxonomy_term'
+      label: 'Entity view (Taxonomy term)'
+      provider: ctools
+      label_display: '0'
+      view_mode: default
+      region: content
+      weight: 0
+      uuid: 06bc7bad-b281-404d-b7b1-a682216fb40b
+      context_mapping:
+        entity: taxonomy_term
   id: panels_variant
   uuid: 3cf0a205-d6ab-4233-ab72-a1166dbe4ff0
   label: null
