--- a/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.default.yml
+++ b/web/sites/default/config/core.entity_view_display.taxonomy_term.community_actions.default.yml
@@ -15,6 +15,16 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - description
 id: taxonomy_term.community_actions.default
 targetEntityType: taxonomy_term
 bundle: community_actions
@@ -36,31 +46,24 @@ content:
             lbw-el: ''
             lbw-cl: ''
             lbw-at: ''
+            ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: lead
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi: true
-            fi-el: p
-            fi-cl: lead
+            fi-el: ''
+            fi-cl: ''
             fi-at: ''
             suffix: ''
             lbw: false
             lb-col: false
-            ow: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
+            fi: false
             fi-def-at: false
-  field_fontawesome_icon:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_fontawesome_icon: true
