POWR-346 fix my shoddy merge conflict error

--- a/web/sites/default/config/views.view.admin_content_services.yml
+++ b/web/sites/default/config/views.view.admin_content_services.yml
@@ -1774,7 +1774,11 @@ display:
           exposed: true
           expose:
             operator_id: topic_op
+            label: ''
             description: ''
+            use_operator: true
+            operator: ''
+            identifier: topic_id
             required: false
             remember: false
             multiple: false
