Hotfix-18 fix some borked config.

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -40,7 +40,6 @@ content:
         add_above: add_above
     third_party_settings: {  }
     region: content
-  field_legacy_path:
   field_summary:
     weight: 26
     settings:
@@ -110,4 +109,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_legacy_path: true
