--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -50,8 +50,6 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_summary_and_lead_paragraph:
-    weight: 1
   field_summary:
     weight: 2
     settings:
@@ -64,6 +62,9 @@ content:
         maxlength_js_enforce: true
         maxlength_js_truncate_html: true
     type: string_textarea
+    region: content
+  field_summary_and_lead_paragraph:
+    weight: 1
     region: content
   field_topics:
     weight: 3
