--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -70,31 +70,10 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
-id: group.bureau_office.default
-targetEntityType: group
-bundle: bureau_office
-mode: default
-content:
-  field_legacy_path:
-    weight: 2
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_summary:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   label:
     label: hidden
     type: string
-    weight: 0
+    weight: -5
     region: content
     settings:
       link_to_entity: false
@@ -106,6 +85,7 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_legacy_path: true
   field_logo: true
   field_official_organization_name: true
   field_phone: true
