--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -31,7 +31,6 @@ third_party_settings:
         - content_moderation_control
         - field_summary
         - field_body
-        - field_topics
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -87,14 +86,7 @@ content:
             fi-def-at: false
     type: string
     region: content
-  field_topics:
-    weight: 3
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
 hidden:
   field_legacy_path: true
+  field_topics: true
   links: true
