POWR-373 add the ability to add a document to a service step.

--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.paragraph.field_step_action_button
+    - paragraphs.paragraphs_type.document
     - paragraphs.paragraphs_type.email_button
     - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
@@ -37,16 +38,17 @@ settings:
       telephone_button: telephone_button
       fax_button: fax_button
       location: location
+      document: document
     target_bundles_drag_drop:
       form_app_button:
         enabled: true
         weight: 5
-      email_button:
-        enabled: true
-        weight: 6
       service_step:
         weight: 6
         enabled: false
+      email_button:
+        enabled: true
+        weight: 6
       simple_text:
         weight: 7
         enabled: false
@@ -61,5 +63,32 @@ settings:
         weight: 10
       service_mode:
         weight: 11
+        enabled: false
+      address:
+        weight: 18
+        enabled: false
+      building:
+        weight: 19
+        enabled: false
+      columns_equal:
+        weight: 20
+        enabled: false
+      document:
+        enabled: true
+        weight: 21
+      group_contact_information:
+        weight: 25
+        enabled: false
+      image:
+        weight: 26
+        enabled: false
+      quote:
+        weight: 28
+        enabled: false
+      service_location:
+        weight: 29
+        enabled: false
+      video:
+        weight: 34
         enabled: false
 field_type: entity_reference_revisions
